fix size of skills box on right to keep reasonable common skills width
Common skill names were getting squashed previously by padding on skill
groups at right. Probably better to specify required width for common
skills instead, but this works as a stop-gap.

--- a/Der Eine Ring/sheet.css
+++ b/Der Eine Ring/sheet.css
@@ -244,6 +244,7 @@ textarea {
 .sheet-skill-groups,
 .sheet-attr-group-skills td:last-child {
     padding-left: 60px !important;
+    width: 100px;
 }
 
 [name*="attr_gear_name"] {
